--- a/Donné/app/src/main/AndroidManifest.xml
+++ b/Donné/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Main.ConnectUsers"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
