--- a/Donné/app/build.gradle
+++ b/Donné/app/build.gradle
@@ -31,8 +31,8 @@ android {
 }
 
 dependencies {
-
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
@@ -43,19 +43,17 @@ dependencies {
     compile 'com.github.d-max:spots-dialog:0.4@aar'
     compile 'com.github.traex.rippleeffect:library:1.3'
     compile 'com.wrapp.floatlabelededittext:library:0.0.6'
-
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
-
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.google.firebase:firebase-messaging:11.8.0'
-
     compile 'com.google.android.gms:play-services-auth:11.8.0'
-
     compile 'com.google.code.gson:gson:2.8.0'
-
-    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
-
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
+
+
+
 
 apply plugin: 'com.google.gms.google-services'
